@@ -70,7 +70,7 @@ settings:
   ignore_ids:
   ignore_imdb_ids:
   item_refresh_delay: 0
-  playlist_sync_to_users: all
+  playlist_sync_to_users:
   playlist_exclude_users:
   playlist_report: false
   verify_ssl: true
